# leetcode-python-practice

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
solutions/easy/two_sum_001/: README.md  solution.py  test_solution.py
solutions/medium/: __init__.py
solutions/medium/longest_substring_003/: README.md  __init__.py  solution.py  test_solution.py
solutions/problem_template/: README.md  solution.py  test_solution.py
